--- a/app/views/blog_posts/_display_teaser.html.haml
+++ b/app/views/blog_posts/_display_teaser.html.haml
@@ -4,12 +4,7 @@
       %a{:href => blog_post_path(post)}
         = post.title
     %h4
-      %span.date
-        by
-      = link_to_blog_post_author( post )
-      %span.date
-        on
-        = format_date( post.created_at )
+      = raw("#{link_to_blog_post_author( post )} on  #{format_date( post.created_at )}") 
 
   .content
     = markdown post.get_teaser
@@ -17,5 +12,3 @@
     .read-more
       %a{:href => blog_post_path(post)}
         <i class="icon-align-left"></i>
-        Read more...
-%hr
