--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,55 +1,14 @@
 @import "shared/partials";
 
-.endorsements-container {
-  color: #aaa;
-  border-bottom: 1px solid black;
-
-  background: $footer_gradient_end;
-  /*background-image: url('/assets/bg/noise.png');*/ /* fallback */
-  /*background-image: url('/assets/bg/noise.png'), -webkit-gradient(linear, left top, left bottom, from($footer_gradient_start), to($footer_gradient_end));*/ /* Saf4+, Chrome */
-  /*background-image: url('/assets/bg/noise.png'), -webkit-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* Chrome 10+, Saf5.1+ */
-  /*background-image: url('/assets/bg/noise.png'),    -moz-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* FF3.6+ */
-  /*background-image: url('/assets/bg/noise.png'),     -ms-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* IE10 */
-  /*background-image: url('/assets/bg/noise.png'),      -o-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* Opera 11.10+ */
-  /*background-image: url('/assets/bg/noise.png'),         linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/
-
-  background-image: -webkit-gradient(linear, left top, left bottom, from($footer_gradient_start), to($footer_gradient_end)); /* Saf4+, Chrome */
-  background-image: -webkit-linear-gradient(top, $endorsement_gradient_start, $endorsement_gradient_end); /* Chrome 10+, Saf5.1+ */
-  background-image:    -moz-linear-gradient(top, $endorsement_gradient_start, $endorsement_gradient_end); /* FF3.6+ */
-  background-image:     -ms-linear-gradient(top, $endorsement_gradient_start, $endorsement_gradient_end); /* IE10 */
-  background-image:      -o-linear-gradient(top, $endorsement_gradient_start, $endorsement_gradient_end); /* Opera 11.10+ */
-  background-image:         linear-gradient(top, $endorsement_gradient_start, $endorsement_gradient_end);
-}
-
-.footer-noise {
+footer {
+  background:#444c4e;
+  border-top: 8px solid #40bcd1;
   color: #fff;
   padding-top: 1.5em;
-  border-top: 1px solid #aaa;
-
-  background: $footer_gradient_end;
-  /*background-image: url('/assets/bg/noise.png');*/ /* fallback */
-  /*background-image: url('/assets/bg/noise.png'), -webkit-gradient(linear, left top, left bottom, from($footer_gradient_start), to($footer_gradient_end));*/ /* Saf4+, Chrome */
-  /*background-image: url('/assets/bg/noise.png'), -webkit-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* Chrome 10+, Saf5.1+ */
-  /*background-image: url('/assets/bg/noise.png'),    -moz-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* FF3.6+ */
-  /*background-image: url('/assets/bg/noise.png'),     -ms-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* IE10 */
-  /*background-image: url('/assets/bg/noise.png'),      -o-linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/ /* Opera 11.10+ */
-  /*background-image: url('/assets/bg/noise.png'),         linear-gradient(top, $footer_gradient_start, $footer_gradient_end);*/
-
-  background-image: -webkit-gradient(linear, left top, left bottom, from($footer_gradient_start), to($footer_gradient_end)); /* Saf4+, Chrome */
-  background-image: -webkit-linear-gradient(top, $footer_gradient_start, $footer_gradient_end); /* Chrome 10+, Saf5.1+ */
-  background-image:    -moz-linear-gradient(top, $footer_gradient_start, $footer_gradient_end); /* FF3.6+ */
-  background-image:     -ms-linear-gradient(top, $footer_gradient_start, $footer_gradient_end); /* IE10 */
-  background-image:      -o-linear-gradient(top, $footer_gradient_start, $footer_gradient_end); /* Opera 11.10+ */
-  background-image:         linear-gradient(top, $footer_gradient_start, $footer_gradient_end);
 
   text-align: left;
   margin-left: auto;
   margin-right: auto;
-
-  .social {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
 
   .menu {
     border-top: 1px solid #555555;
@@ -71,7 +30,7 @@
     color: #cccccc;
   }
   a:hover {
-    color: $link_color;
+    color: #40bcd1;
     text-decoration: none;
   }
   ul {
@@ -80,13 +39,17 @@
     padding-top: 10px;
     list-style-type: none;
     li.heading {
-      font-weight: bold;
-      font-size: 1.0em;
+      font-size: 1.2em;
       padding-bottom: 10px;
-      color: white;
+      a {
+        color: #dbe1e1;
+      }
     }
     li {
       font-size: 0.8em;
+      a{
+        color: #7b7f80;
+      }
     }
   }
 
@@ -112,16 +75,6 @@
   }
 }
 
-.like_button_div{
-  margin-left: auto;
-  margin-right: auto;
-  width: 350px;
-  text-align: center; height: 50px; background: #fff;
-  .tr  {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
 
 .footer-link
 {
@@ -130,52 +83,7 @@
   padding-right: 20px;
 
   a:hover {
-    color: $link_hover_color !important;
-  }
-}
-
-
-
-.fb-like-box-small
-{
-  height: 63px;
-}
-.fb-like-box-large
-{
-  /*height: 400px;*/
-  padding: 15px;
-  width: 292px;
-  margin: 20px;
-  margin-left:auto;
-  margin-right:auto;
-  @include rounded_borders(#ccc, 1px, 6px);
-  @include box_shadow(#ccc, 0px, 0px, 5px);
-}
-
-footer {
-  .endorsement {
-    text-align: center;
-    margin-bottom: 1.5em;
-    margin-top: 1.5em;
-    .endorsement-body {
-      color: #ffffff;
-    }
-  
-    .attribution {
-      /*margin-left: 60px;*/
-      color: $white;
-      font-decoration: none;
-      .author {
-        font-family: $museo_sans_700;
-      }
-    }
-
-    a {
-      &:hover {
-        text-decoration: none;
-        text-shadow: 0px 0px 1px #555;
-      }
-    }
+    color: #40bcd1;
   }
 }
 
