--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,37 +115,27 @@ if ($("#flash-message").text().length > 0)
 </div>
 
 <footer>
-  <div class="footer-noise">
-    <div class="container ">
-      <div class="row">
-        <div class="span8 social">
-          <%= render :partial => "/shared/social_media" %>
-        </div>
-        <div class="span4 social">
-          Contact: <a href="mailto:info@80000hours.org">info@80000hours.org</a>
-        </div>
+  <div class="container ">
+    <div class="row">
+      <div class="col-md-8 menu">
+        <%= draw_footer_menu %>
       </div>
-      <div class="row">
-        <div class="span12 menu">
-          <%= draw_footer_menu %>
-        </div>
+    </div>
+    <div class="row">
+      <div class="span12 disclaimer">
+        <p>
+        We can give you information about your career options that we hope is useful. But, at the end of the day, how you choose to use this information is up to you. <strong>We can't take responsibility for the outcomes of your choices.</strong> Our advisors are not professionally qualified career counsellors or advisors. We recommend you use our advice alongside someone professionally qualified.
+        </p>
       </div>
-      <div class="row">
-        <div class="span12 disclaimer">
-          <p>
-          We can give you information about your career options that we hope is useful. But, at the end of the day, how you choose to use this information is up to you. <strong>We can't take responsibility for the outcomes of your choices.</strong> Our advisors are not professionally qualified career counsellors or advisors. We recommend you use our advice alongside someone professionally qualified.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="span12 charity">
-          <p>
-          80,000 Hours is part of the Centre for Effective Altruism, a registered charity in England and Wales, Registered Charity Number 1149828
-          </p>
-          <p>
-          Centre for Effective Altruism, Oxford Uehiro Centre for Practical Ethics, Littlegate House, St Ebbes Street, Oxford OX1 1PT, UK
-          </p>
-        </div>
+    </div>
+    <div class="row">
+      <div class="span12 charity">
+        <p>
+        80,000 Hours is part of the Centre for Effective Altruism, a registered charity in England and Wales, Registered Charity Number 1149828
+        </p>
+        <p>
+        Centre for Effective Altruism, Oxford Uehiro Centre for Practical Ethics, Littlegate House, St Ebbes Street, Oxford OX1 1PT, UK
+        </p>
       </div>
     </div>
   </div>
