--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -18,12 +18,9 @@ footer {
   margin-left: auto;
   margin-right: auto; }
   footer .menu {
-    border-top: 1px solid #555555;
-    border-bottom: 1px solid #555555;
-    padding-top: 10px;
     padding-bottom: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+  }
   footer .logo {
     float: left;
     clear: none;
@@ -37,9 +34,11 @@ footer {
     text-decoration: none; }
   footer ul {
     float: left;
-    width: 13%;
-    padding-top: 10px;
-    list-style-type: none; }
+    list-style-type: none;
+    padding-left: 0px;
+    padding-right: 20px;
+    min-width: 10%;
+  }
     footer ul li.heading {
       font-size: 1.2em;
       padding-bottom: 10px; }
