--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,11 +106,7 @@ if ($("#flash-message").text().length > 0)
 
 
   <section id="content">
-    <div class="row">
-      <div class="span12">
-        <%= yield %>
-      </div>
-    </div>
+    <%= yield %>
   </section>
 </div>
 
@@ -122,14 +118,14 @@ if ($("#flash-message").text().length > 0)
       </div>
     </div>
     <div class="row">
-      <div class="span12 disclaimer">
+      <div class="col-md-12 disclaimer">
         <p>
         We can give you information about your career options that we hope is useful. But, at the end of the day, how you choose to use this information is up to you. <strong>We can't take responsibility for the outcomes of your choices.</strong> Our advisors are not professionally qualified career counsellors or advisors. We recommend you use our advice alongside someone professionally qualified.
         </p>
       </div>
     </div>
     <div class="row">
-      <div class="span12 charity">
+      <div class="col-md-12 charity">
         <p>
         80,000 Hours is part of the Centre for Effective Altruism, a registered charity in England and Wales, Registered Charity Number 1149828
         </p>
