--- a/app/views/pages/endorsements.html.haml
+++ b/app/views/pages/endorsements.html.haml
@@ -1,12 +1,12 @@
 .row
-  .span12
+  .col-md-12
     .box
       .page-header
         %h1 Endorsements for 80,000 Hours
     
 - @endorsements.each do |e|
   .row
-    .span6
+    .col-md-6
       .endorsement
         .body
           = markdown e["body"]
