--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -107,7 +107,7 @@
 </div>
 
 <div class="row">
-  <div class="span3">
+  <div class="col-md-3">
     <div class="fp-splash">
       <h2 id="career_advice"><a href="/career-advice">Career advice</a></h2>
 
