--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,30 +137,8 @@ if ($("#flash-message").text().length > 0)
   </div>
 </footer>
 
-<!-- Quantcast Tag -->
-<script type="text/javascript">
-var _qevents = _qevents || [];
+<%= render :partial => "/shared/quantcast" %>
 
-(function() {
-  var elem = document.createElement('script');
-  elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
-  elem.async = true;
-  elem.type = "text/javascript";
-  var scpt = document.getElementsByTagName('script')[0];
-  scpt.parentNode.insertBefore(elem, scpt);
-})();
-
-_qevents.push({
-  qacct:"p-1J6MBer_R0ywy"
-});
-</script>
-
-<noscript>
-  <div style="display:none;">
-    <img src="//pixel.quantserve.com/pixel/p-1J6MBer_R0ywy.gif" border="0" height="1" width="1" alt="Quantcast"/>
-  </div>
-</noscript>
-<!-- End Quantcast tag -->
 </body>
 
 </html>
