--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -12,15 +12,15 @@
 footer {
   background: #444c4e;
   border-top: 8px solid #40bcd1;
-  color: #fff;
-  padding-top: 1.5em;
+  color: #7b7f80;
+  padding-top: 40px;
+  margin-top: 40px;
   text-align: left;
   margin-left: auto;
   margin-right: auto; }
   footer .menu {
     padding-bottom: 10px;
-    margin-bottom: 10px;
-  }
+    margin-bottom: 10px; }
   footer .logo {
     float: left;
     clear: none;
@@ -35,12 +35,12 @@ footer {
   footer ul {
     float: left;
     list-style-type: none;
-    padding-left: 0px;
     padding-right: 20px;
-    min-width: 10%;
-  }
+    padding-left: 0px;
+    min-width: 8%;
+    max-width: 16%; }
     footer ul li.heading {
-      font-size: 1.2em;
+      font-size: 1.1em;
       padding-bottom: 10px; }
       footer ul li.heading a {
         color: #dbe1e1; }
@@ -48,9 +48,6 @@ footer {
       font-size: 0.8em; }
       footer ul li a {
         color: #7b7f80; }
-  footer .disclaimer {
-    font-size: 0.8em;
-    color: #ccc; }
   footer .charity {
     margin-top: 10px;
     margin-bottom: 30px; }
@@ -62,6 +59,14 @@ footer {
       color: #d4346f; }
     footer .charity a:hover {
       color: #c52a63; }
+  footer .logo-line {
+    background: #373f41;
+    color: #7b8181;
+    padding: 14px; }
+    footer .logo-line p {
+      font-size: 10px; }
+    footer .logo-line img {
+      width: 130px; }
 
 .footer-link {
   padding: 10px;
