--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,21 +117,25 @@ if ($("#flash-message").text().length > 0)
         <%= draw_footer_menu %>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12 disclaimer">
-        <p>
-        We can give you information about your career options that we hope is useful. But, at the end of the day, how you choose to use this information is up to you. <strong>We can't take responsibility for the outcomes of your choices.</strong> Our advisors are not professionally qualified career counsellors or advisors. We recommend you use our advice alongside someone professionally qualified.
-        </p>
-      </div>
+    <hr>
+    <div>
+      <p>
+            We can give you information about your career options that we hope is useful. But, at the end of the day, how you choose to use this information is up to you. <strong>We can't take responsibility for the outcomes of your choices.</strong> Our advisors are not professionally qualified career counsellors or advisors. We recommend you use our advice alongside someone professionally qualified.
+            </p>
+            <p>
+            80,000 Hours is part of the Centre for Effective Altruism, a registered charity in England and Wales, Registered Charity Number 1149828
+            Centre for Effective Altruism, Oxford Uehiro Centre for Practical Ethics, Littlegate House, St Ebbes Street, Oxford OX1 1PT, UK
+          </p>
     </div>
-    <div class="row">
-      <div class="col-md-12 charity">
-        <p>
-        80,000 Hours is part of the Centre for Effective Altruism, a registered charity in England and Wales, Registered Charity Number 1149828
-        </p>
-        <p>
-        Centre for Effective Altruism, Oxford Uehiro Centre for Practical Ethics, Littlegate House, St Ebbes Street, Oxford OX1 1PT, UK
-        </p>
+   </div>
+  <div class="logo-line">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+        <%= link_to image_tag('/assets/footer/logo-next.png'), '/', id: 'header-logo' %>
+        </div>
+        <div class="col-md-10">
+        </div>
       </div>
     </div>
   </div>
