--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -18,8 +18,12 @@ footer {
   text-align: left;
   margin-left: auto;
   margin-right: auto; }
+  footer p {
+    font-size: 0.8em; }
   footer .menu {
-    padding-bottom: 10px;
+    padding-bottom: 10px; }
+  footer hr {
+    border-color: #555555;
     margin-bottom: 10px; }
   footer .logo {
     float: left;
@@ -63,8 +67,6 @@ footer {
     background: #373f41;
     color: #7b8181;
     padding: 14px; }
-    footer .logo-line p {
-      font-size: 10px; }
     footer .logo-line img {
       width: 130px; }
 
