--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -51,6 +51,9 @@ footer {
       a {
         color: #dbe1e1;
       }
+      a:hover{
+        color: #40bcd1; 
+      }
     }
     li {
       font-size: 0.8em;
