created home template, home css file

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,10 +10,11 @@
  *= require datepicker
  *= require dashboard
  *= require bootstrap3
+ *= require layout
  *= require header2
  *= require blog
  *= require footer
- *= require layout
+ *= require home
 */
 
 // require header
