--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,12 +1,30 @@
 .home{
   .cta-section{
+    background: #40bcd1;
     .cta{
       font-size:27px;
     }
   }
   .people-say{
-    background: #ddd;
+    background: #eee;
+    padding: 28px 0 34px 0;
+    .profile{
+      padding: 0 26px;
+      p{
+        color: #333;
+        font-size:18px;
+      }
+      h4{
+        font-size:14px;
+        color:#000;
+      }
+      img{
+        width:180px;
+        margin-bottom:18px;
+      }
+    }
   }
+
   .core-concepts{
     padding: 38px 0 56px 0;
     h1{
