--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,45 +1,44 @@
 .home
-  .section.cta-section.container
-    .row
-      .col-md-3.col-md-offset-3
-        %button.btn.btn-large.btn-primary.cta{href: "/"}
-          Read Our Research
-      .col-md-3
-        %button.btn.btn-large.btn-primary.cta{href: "/"}
-          Get Career Coaching
-  %br/
-  
+  .section.cta-section
+    .container
+      .row
+        .col-md-3.col-md-offset-3
+          %button.btn.btn-large.cta{href: "/"}
+            Read Our Research
+        .col-md-3
+          %button.btn.btn-large.cta{href: "/"}
+            Get Career Coaching
   .section.people-say
     .container
       .row
-        .col-md-1
-        .col-md-10
-          .row
-            .col-md-3.profile
-              = image_tag("/assets/front_page/people/1.png")
-              %p
-                "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-              %h4
-                Mia George, Analyst
-            .col-md-3.profile
-              = image_tag("/assets/front_page/people/3.png")
-              %p
-                "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-              %h4
-                Mia George, Analyst
-            .col-md-3.profile
-              = image_tag("/assets/front_page/people/2.png")
-              %p
-                "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-              %h4
-                Mia George, Analyst
-            .col-md-3.profile
-              = image_tag("/assets/front_page/people/4.png")
-              %p
-                "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-              %h4
-                Mia George, Analyst
-        .col-md-1
+        .col-md-3.profile
+          .text-center
+            = image_tag("/assets/front_page/people/1.png")
+          %p
+            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+          %h4
+            Mia George, Analyst
+        .col-md-3.profile
+          .text-center
+            = image_tag("/assets/front_page/people/3.png")
+          %p
+            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+          %h4
+            Mia George, Analyst
+        .col-md-3.profile
+          .text-center
+            = image_tag("/assets/front_page/people/2.png")
+          %p
+            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+          %h4
+            Mia George, Analyst
+        .col-md-3.profile
+          .text-center
+            = image_tag("/assets/front_page/people/4.png")
+          %p
+            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+          %h4
+            Mia George, Analyst
 
 
   .section.core-concepts.container
