--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,8 +1,12 @@
 .home
   .section.cta-section
     .container
-      .row
-        .col-md-3.col-md-offset-3
+      %h1.text-center
+        Maximize Your Impact
+      %h2.text-center
+        You’ve got 80,000 hours to make a difference. Don't let them go to waste. Our free coaching and research helps you find the causes and careers in which you can make the most difference.
+      .row.buttons
+        .col-md-4.col-md-offset-2
           %button.btn.btn-large.cta{href: "/"}
             Read Our Research
         .col-md-3
