--- a/app/assets/stylesheets/header2.scss
+++ b/app/assets/stylesheets/header2.scss
@@ -17,21 +17,32 @@ src: url("243719_0_0.eot?#iefix") format("embedded-opentype"), url("243719_0_0.w
 /*$magenta_2: #e30068;*/
 header{
   .logo img {
-  max-width: 150px; }
+  max-width: 170px; }
 
   ul.nav{
     margin-top:17px;
+    .active{
+      box-shadow: 4px 4px 0px #999;
+      border-radius:3px;
+    }
 
     > li{
       margin-left:30px;
       > a{
         padding:5px 10px;
-        font-size:14px;
+        font-size:18px;
         color: #666;
+        border-radius:3px;
         &:hover{
          background-color:#40bcd1;
          color: white;
+         box-shadow: 4px 4px 0px #999;
         }
+      }
+      .dropdown-menu{
+        box-shadow: 5px 5px 0px rgba(0,0,0,0.4);
+        border: 1px solid #999;
+        border-radius: 2px;
       }
     }
     .caret{
@@ -49,5 +60,6 @@ header{
 header.navbar{
   background: #eee;
   padding:20px 0 20px 0;
+  margin-bottom: 0px;
 }
 
