--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -49,14 +49,36 @@
       img{
         width:180px;
         margin-bottom:18px;
+        -webkit-filter: drop-shadow(4px 4px 1px #666);
+        filter: drop-shadow(4px 4px 1px #666);
       }
     }
   }
 
   .core-concepts{
-    padding: 38px 0 56px 0;
+    padding: 0 0 56px 0;
     h1{
-      margin-bottom: 58px;
+      margin-bottom: 35px;
+      margin-top:59px;
+      color: #222;
+      border-bottom:2px dashed #ccc;
+      padding-bottom:15px;
+    }
+    .item{
+      padding: 0 62px;
+      text-align:center;
+      h2{
+        font-size:23px;
+        color: #444;
+      }
+      img{
+        height: 110px;
+
+      }
+      p{
+        text-align:justify;
+        color: #666;
+      }
     }
   }
   .affiliations{
