--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -48,47 +48,49 @@
   .section.core-concepts.container
 
     %h1.text-center
-      Our Core Concepts
+      Core Concepts
     .row
-      .col-md-4
+      .col-md-4.item
         .text-center
-          = image_tag("/assets/front_page/icons/103.png")
+          = image_tag("/assets/front_page/icons/blue/103.png")
           %h2
             Maximizing Impact
         %p
           Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4
+      .col-md-4.item
         .text-center
-          = image_tag("/assets/front_page/icons/247.png")
+          = image_tag("/assets/front_page/icons/blue/247.png")
           %h2
-            Maximizing Impact
+            Evidence-Baced
         %p
           Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4
+      .col-md-4.item
         .text-center
-          = image_tag("/assets/front_page/icons/272.png")
+          = image_tag("/assets/front_page/icons/blue/272.png")
           %h2
-            Maximizing Impact
+            Replacability
         %p
           Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+    %h1.text-center
+      Main Research
     .row
-      .col-md-4
+      .col-md-4.item
         .text-center
-          = image_tag("/assets/front_page/icons/103.png")
-        %h2
-          Best Causes
-        %p
-          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4
-        .text-center
-          = image_tag("/assets/front_page/icons/272.png")
+          = image_tag("/assets/front_page/icons/blue/103.png")
           %h2
-            Planning Process
+            Best Causes
         %p
           Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4
+      .col-md-4.item
         .text-center
-          = image_tag("/assets/front_page/icons/272.png")
+          = image_tag("/assets/front_page/icons/blue/272.png")
+          %h2
+            Best Careers
+        %p
+          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+      .col-md-4.item
+        .text-center
+          = image_tag("/assets/front_page/icons/blue/272.png")
           %h2
             Planning Process
         %p
