--- a/app/views/blog_posts/_subscribe.html.haml
+++ b/app/views/blog_posts/_subscribe.html.haml
@@ -1,10 +1,7 @@
 .subscribe
   %h3 Subscribe
   .subscribe-option
-    .social-btn-rss
-      %a{:href => '/blog/feed.atom'}
     .subscribe-text
       %a{:href => '/blog/feed.atom'} Subscribe via RSS
-    .clearfix
   .subscribe-option
-    = render partial: "./shared/mailing_list", locals: { text: "Get updates on the best of the blog" }
+    = render partial: "./shared/mailing_list", locals: { text: "" }
