--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -22,7 +22,7 @@
     color: white;
     text-shadow: 4px 4px 1px #666; }
   .home .cta-section h2 {
-    color: black;
+    color: #333;
     font-size: 32px; }
   .home .cta-section .buttons {
     margin-top: 40px; }
@@ -31,7 +31,8 @@
       padding: 19px;
       font-weight: 500px;
       background: white;
-      box-shadow: 5px 5px 1px #666; }
+      box-shadow: 5px 5px 1px #666;
+      color: #333; }
       .home .cta-section .buttons .cta:hover {
         background: #aaa; }
 .home .people-say {
