--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -13,10 +13,11 @@
           .fblike
             <fb:like href="#{blog_posts_path}" send="false" width="450" show_faces="false"></fb:like>
 
+        = render :partial => "categories"
+        %hr
         = render :partial => "subscribe"
         %hr
         = render :partial => "popular_posts"
-        %hr
 
     .col-md-9
       - @posts.each do |post|
