--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,100 +1,102 @@
 .home
-  .section.cta-section
+  .background
+    .section.cta-section
+      .container
+        %h1.text-center
+          Maximize Your Impact
+        %h2.text-center
+          You’ve got 80,000 hours to make a difference. Don't let them go to waste. Our free coaching and research helps you find the causes and careers in which you can make the most difference.
+        .row.buttons
+          .col-md-4.col-md-offset-2
+            %button.btn.btn-large.cta{href: "/"}
+              Read Our Research
+          .col-md-3
+            %button.btn.btn-large.cta{href: "/"}
+              Get Career Coaching
+    .section.people-say
+      .container
+        .row
+          .col-md-3.profile
+            .text-center
+              = image_tag("/assets/front_page/people/1.png")
+            %p
+              "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+            %h4
+              Mia George, Analyst
+          .col-md-3.profile
+            .text-center
+              = image_tag("/assets/front_page/people/3.png")
+            %p
+              "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+            %h4
+              Mia George, Analyst
+          .col-md-3.profile
+            .text-center
+              = image_tag("/assets/front_page/people/2.png")
+            %p
+              "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+            %h4
+              Mia George, Analyst
+          .col-md-3.profile
+            .text-center
+              = image_tag("/assets/front_page/people/4.png")
+            %p
+              "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
+            %h4
+              Mia George, Analyst
+
+
+  .section.core-concepts
     .container
+
       %h1.text-center
-        Maximize Your Impact
-      %h2.text-center
-        You’ve got 80,000 hours to make a difference. Don't let them go to waste. Our free coaching and research helps you find the causes and careers in which you can make the most difference.
-      .row.buttons
-        .col-md-4.col-md-offset-2
-          %button.btn.btn-large.cta{href: "/"}
-            Read Our Research
-        .col-md-3
-          %button.btn.btn-large.cta{href: "/"}
-            Get Career Coaching
-  .section.people-say
-    .container
+        Core Concepts
       .row
-        .col-md-3.profile
+        .col-md-4.item
           .text-center
-            = image_tag("/assets/front_page/people/1.png")
+            = image_tag("/assets/front_page/icons/blue/103.png")
+            %h2
+              Maximizing Impact
           %p
-            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-          %h4
-            Mia George, Analyst
-        .col-md-3.profile
+            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+        .col-md-4.item
           .text-center
-            = image_tag("/assets/front_page/people/3.png")
+            = image_tag("/assets/front_page/icons/blue/247.png")
+            %h2
+              Evidence-Baced
           %p
-            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-          %h4
-            Mia George, Analyst
-        .col-md-3.profile
+            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+        .col-md-4.item
           .text-center
-            = image_tag("/assets/front_page/people/2.png")
+            = image_tag("/assets/front_page/icons/blue/272.png")
+            %h2
+              Replacability
           %p
-            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-          %h4
-            Mia George, Analyst
-        .col-md-3.profile
+            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+      %h1.text-center
+        Main Research
+      .row
+        .col-md-4.item
           .text-center
-            = image_tag("/assets/front_page/people/4.png")
+            = image_tag("/assets/front_page/icons/blue/103.png")
+            %h2
+              Best Causes
           %p
-            "80,000 Hours really helped me to do such-and-such with my time.  Thank god!"
-          %h4
-            Mia George, Analyst
-
-
-  .section.core-concepts.container
-
-    %h1.text-center
-      Core Concepts
-    .row
-      .col-md-4.item
-        .text-center
-          = image_tag("/assets/front_page/icons/blue/103.png")
-          %h2
-            Maximizing Impact
-        %p
-          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4.item
-        .text-center
-          = image_tag("/assets/front_page/icons/blue/247.png")
-          %h2
-            Evidence-Baced
-        %p
-          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4.item
-        .text-center
-          = image_tag("/assets/front_page/icons/blue/272.png")
-          %h2
-            Replacability
-        %p
-          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-    %h1.text-center
-      Main Research
-    .row
-      .col-md-4.item
-        .text-center
-          = image_tag("/assets/front_page/icons/blue/103.png")
-          %h2
-            Best Causes
-        %p
-          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4.item
-        .text-center
-          = image_tag("/assets/front_page/icons/blue/272.png")
-          %h2
-            Best Careers
-        %p
-          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
-      .col-md-4.item
-        .text-center
-          = image_tag("/assets/front_page/icons/blue/272.png")
-          %h2
-            Planning Process
-        %p
-          Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+        .col-md-4.item
+          .text-center
+            = image_tag("/assets/front_page/icons/blue/272.png")
+            %h2
+              Best Careers
+          %p
+            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+        .col-md-4.item
+          .text-center
+            = image_tag("/assets/front_page/icons/blue/272.png")
+            %h2
+              Planning Process
+          %p
+            Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
 
 
   .section.affiliations
